# pySVCGAL

./: .gitignore  README.md  pyproject.toml  setup.py
src/pySVCGAL/: __init__.py  pySVCGAL.py
src/pySVCGAL/clib/: load_library.py
