[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pySVCGAL"
version = "0.0.5"
authors = [
  { name="Satabol", email="satabol@yandex.ru" },
]
description = "Python CGAL stright skeleton extrude wrapper"
readme = "README.md"
requires-python = ">=3.8"
keywords = ['skeleton','extrude']
dependencies = ['more_itertools']
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",        
    "Programming Language :: Python :: 3",        
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
]

[project.urls]
Homepage = "https://github.com/satabol/pySVCGAL"
Issues = "https://github.com/satabol/pySVCGAL/issues"